# MyRoad

./: .gitignore  .prettierrc  README  README.md  alembic.ini  database.db  package.json  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 7628f3dc9dee_added_user_table.py  8b8422a7a1ed_added_token_table.py
app/core/: config.py  database.py
app/models/: base.py  user.py
app/routers/: auth.py  upload.py
app/services/: auth.py  user.py
app/static/css/: output.css
app/static/js/: alpinejs.min.js  htmx.min.js
app/templates/: base.html  dashboard.html  index.html
app/templates/auth/: login.html  register.html
app/templates/components/: sidebar.html
app/utils/: dependencies.py
